# enigma2-fulan-plugins

./: Makefile.am  README.md  configure.ac
SH4BoosterControl/src/: plugin.py
